[package]
name = "hello-pi"
version = "0.1.0"
edition = "2021"

[dependencies]
gpio-cdev = { git = "https://github.com/azureqaq/gpio-cdev", branch = "ext-linerequestflags", features = [
    "async-tokio",
] }
rppal = { version = "0.19.0", features = ["hal"] }
tokio = { version = "1.40.0", features = ["full"] }
anyhow = "1.0.89"
clap = { version = "4.5.19", features = ["derive"] }
futures = "0.3.30"
